tests/snapshots/formats__cups-raster__sample-pwg.ras.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ sample-pwg.ras — PWG raster v2, 1 pages, 16×4, 300 dpi, 8-bit sGray  [0x0+0x722]
    Sync word: "2SaR" — version 2, little-endian  [0x0+0x4]
  ▾ Page 1 — 16×4, 300 dpi, 8-bit sGray  [0x4+0x71e]
    ▾ Page header  [0x4+0x1a4]
        MediaClass: "PwgRaster"  [0x4+0x40]
        MediaColor: ""  [0x44+0x40]
        MediaType: "stationery"  [0x84+0x40]
        OutputType: ""  [0xc4+0x40]
        AdvanceDistance: 0  [0x104+0x4]
        AdvanceMedia: 0  [0x108+0x4]
        Collate: 0  [0x10c+0x4]
        CutMedia: 0  [0x110+0x4]
        Duplex: 0  [0x114+0x4]
        HWResolution[0]: 300  [0x118+0x4]
        HWResolution[1]: 300  [0x11c+0x4]
        ImagingBoundingBox[0]: 0  [0x120+0x4]
        ImagingBoundingBox[1]: 0  [0x124+0x4]
        ImagingBoundingBox[2]: 612  [0x128+0x4]
        ImagingBoundingBox[3]: 792  [0x12c+0x4]
        InsertSheet: 0  [0x130+0x4]
        Jog: 0  [0x134+0x4]
        LeadingEdge: 0  [0x138+0x4]
        Margins[0]: 0  [0x13c+0x4]
        Margins[1]: 0  [0x140+0x4]
        ManualFeed: 0  [0x144+0x4]
        MediaPosition: 0  [0x148+0x4]
        MediaWeight: 0  [0x14c+0x4]
        MirrorPrint: 0  [0x150+0x4]
        NegativePrint: 0  [0x154+0x4]
        NumCopies: 1  [0x158+0x4]
        Orientation: 0  [0x15c+0x4]
        OutputFaceUp: 0  [0x160+0x4]
        PageSize[0]: 612  [0x164+0x4]
        PageSize[1]: 792  [0x168+0x4]
        Separations: 0  [0x16c+0x4]
        TraySwitch: 0  [0x170+0x4]
        Tumble: 0  [0x174+0x4]
        cupsWidth: 16  [0x178+0x4]
        cupsHeight: 4  [0x17c+0x4]
        cupsMediaType: 0  [0x180+0x4]
        cupsBitsPerColor: 8  [0x184+0x4]
        cupsBitsPerPixel: 8  [0x188+0x4]
        cupsBytesPerLine: 16  [0x18c+0x4]
        cupsColorOrder: chunky (0x0)  [0x190+0x4]
        cupsColorSpace: sGray (0x12)  [0x194+0x4]
        cupsCompression: 0  [0x198+0x4]
        cupsRowCount: 0  [0x19c+0x4]
        cupsRowFeed: 0  [0x1a0+0x4]
        cupsRowStep: 0  [0x1a4+0x4]
      Version 2 fields — colour count, scaling, cupsInteger/cupsReal/cupsString, marker type, rendering intent, page size name  [0x1a8+0x560]
      Raster data — run-length encoded  [0x708+0x1a]
