tests/snapshots/formats__cups-raster__sample-v3.ras.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ sample-v3.ras — CUPS raster v3, 2 pages, 16×4, 300 dpi, 8-bit sGray  [0x0+0xe8c]
    Sync word: "RaS3" — version 3, big-endian  [0x0+0x4]
  ▾ Page 1 — 16×4, 300 dpi, 8-bit sGray  [0x4+0x744]
    ▾ Page header  [0x4+0x1a4]
        MediaClass: ""  [0x4+0x40]
        MediaColor: ""  [0x44+0x40]
        MediaType: "stationery"  [0x84+0x40]
        OutputType: ""  [0xc4+0x40]
        AdvanceDistance: 0  [0x104+0x4]
        AdvanceMedia: 0  [0x108+0x4]
        Collate: 0  [0x10c+0x4]
        CutMedia: 0  [0x110+0x4]
        Duplex: 0  [0x114+0x4]
        HWResolution[0]: 300  [0x118+0x4]
        HWResolution[1]: 300  [0x11c+0x4]
        ImagingBoundingBox[0]: 0  [0x120+0x4]
        ImagingBoundingBox[1]: 0  [0x124+0x4]
        ImagingBoundingBox[2]: 612  [0x128+0x4]
        ImagingBoundingBox[3]: 792  [0x12c+0x4]
        InsertSheet: 0  [0x130+0x4]
        Jog: 0  [0x134+0x4]
        LeadingEdge: 0  [0x138+0x4]
        Margins[0]: 0  [0x13c+0x4]
        Margins[1]: 0  [0x140+0x4]
        ManualFeed: 0  [0x144+0x4]
        MediaPosition: 0  [0x148+0x4]
        MediaWeight: 0  [0x14c+0x4]
        MirrorPrint: 0  [0x150+0x4]
        NegativePrint: 0  [0x154+0x4]
        NumCopies: 1  [0x158+0x4]
        Orientation: 0  [0x15c+0x4]
        OutputFaceUp: 0  [0x160+0x4]
        PageSize[0]: 612  [0x164+0x4]
        PageSize[1]: 792  [0x168+0x4]
        Separations: 0  [0x16c+0x4]
        TraySwitch: 0  [0x170+0x4]
        Tumble: 0  [0x174+0x4]
        cupsWidth: 16  [0x178+0x4]
        cupsHeight: 4  [0x17c+0x4]
        cupsMediaType: 0  [0x180+0x4]
        cupsBitsPerColor: 8  [0x184+0x4]
        cupsBitsPerPixel: 8  [0x188+0x4]
        cupsBytesPerLine: 16  [0x18c+0x4]
        cupsColorOrder: chunky (0x0)  [0x190+0x4]
        cupsColorSpace: sGray (0x12)  [0x194+0x4]
        cupsCompression: 0  [0x198+0x4]
        cupsRowCount: 0  [0x19c+0x4]
        cupsRowFeed: 0  [0x1a0+0x4]
        cupsRowStep: 0  [0x1a4+0x4]
      Version 2 fields — colour count, scaling, cupsInteger/cupsReal/cupsString, marker type, rendering intent, page size name  [0x1a8+0x560]
      Raster data — uncompressed  [0x708+0x40]
  ▾ Page 2 — 16×4, 300 dpi, 8-bit sGray  [0x748+0x744]
    ▾ Page header  [0x748+0x1a4]
        MediaClass: ""  [0x748+0x40]
        MediaColor: ""  [0x788+0x40]
        MediaType: "stationery"  [0x7c8+0x40]
        OutputType: ""  [0x808+0x40]
        AdvanceDistance: 0  [0x848+0x4]
        AdvanceMedia: 0  [0x84c+0x4]
        Collate: 0  [0x850+0x4]
        CutMedia: 0  [0x854+0x4]
        Duplex: 0  [0x858+0x4]
        HWResolution[0]: 300  [0x85c+0x4]
        HWResolution[1]: 300  [0x860+0x4]
        ImagingBoundingBox[0]: 0  [0x864+0x4]
        ImagingBoundingBox[1]: 0  [0x868+0x4]
        ImagingBoundingBox[2]: 612  [0x86c+0x4]
        ImagingBoundingBox[3]: 792  [0x870+0x4]
        InsertSheet: 0  [0x874+0x4]
        Jog: 0  [0x878+0x4]
        LeadingEdge: 0  [0x87c+0x4]
        Margins[0]: 0  [0x880+0x4]
        Margins[1]: 0  [0x884+0x4]
        ManualFeed: 0  [0x888+0x4]
        MediaPosition: 0  [0x88c+0x4]
        MediaWeight: 0  [0x890+0x4]
        MirrorPrint: 0  [0x894+0x4]
        NegativePrint: 0  [0x898+0x4]
        NumCopies: 1  [0x89c+0x4]
        Orientation: 0  [0x8a0+0x4]
        OutputFaceUp: 0  [0x8a4+0x4]
        PageSize[0]: 612  [0x8a8+0x4]
        PageSize[1]: 792  [0x8ac+0x4]
        Separations: 0  [0x8b0+0x4]
        TraySwitch: 0  [0x8b4+0x4]
        Tumble: 0  [0x8b8+0x4]
        cupsWidth: 16  [0x8bc+0x4]
        cupsHeight: 4  [0x8c0+0x4]
        cupsMediaType: 0  [0x8c4+0x4]
        cupsBitsPerColor: 8  [0x8c8+0x4]
        cupsBitsPerPixel: 8  [0x8cc+0x4]
        cupsBytesPerLine: 16  [0x8d0+0x4]
        cupsColorOrder: chunky (0x0)  [0x8d4+0x4]
        cupsColorSpace: sGray (0x12)  [0x8d8+0x4]
        cupsCompression: 0  [0x8dc+0x4]
        cupsRowCount: 0  [0x8e0+0x4]
        cupsRowFeed: 0  [0x8e4+0x4]
        cupsRowStep: 0  [0x8e8+0x4]
      Version 2 fields — colour count, scaling, cupsInteger/cupsReal/cupsString, marker type, rendering intent, page size name  [0x8ec+0x560]
      Raster data — uncompressed  [0xe4c+0x40]
